--- a/app/src/main/res/layout/haber_kartlari_row.xml
+++ b/app/src/main/res/layout/haber_kartlari_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -27,10 +27,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/kartıAdi"
+                android:id="@+id/kartAdi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:paddingLeft="10dp"
                 android:text="Haber Başlığı:"
                 android:textColor="@color/purple_700"
@@ -43,7 +43,8 @@
                 android:maxLines="5"
                 android:paddingLeft="10dp"
                 android:text="haber açıklaması:"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
