--- a/app/src/main/res/layout/activity_detayli_haberler.xml
+++ b/app/src/main/res/layout/activity_detayli_haberler.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detayliHaberler"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".detayliHaberler">
 
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/haberDetaylari_görseli"
-                android:layout_width="match_parent"
-                android:layout_height="275dp"
-                app:srcCompat="@drawable/img_8" />
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="230dp"
+                app:srcCompat="@drawable/detayli_kaza2" />
 
             <TextView
                 android:id="@+id/haberDetaylari_basligi"
@@ -50,4 +54,4 @@
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
