--- a/app/src/main/res/layout/activity_detayli_haberler.xml
+++ b/app/src/main/res/layout/activity_detayli_haberler.xml
@@ -24,9 +24,16 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="230dp"
+                android:paddingTop="3dp"
                 app:srcCompat="@drawable/detayli_kaza2" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/img_7" />
 
             <TextView
                 android:id="@+id/haberDetaylari_basligi"
