--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -15,10 +15,10 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView9"
+            android:id="@+id/imageView10"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            app:srcCompat="@drawable/onemli" />
+            android:layout_height="80dp"
+            app:srcCompat="@drawable/onemli2" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -26,7 +26,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
