haber türleri değiştirildi.

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -18,8 +18,8 @@
         android:id="@+id/headerText_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NEWS HABER AJANSI"
-        android:textSize="20dp"
+        android:text="NEWS MAGAZİN AJANSI"
+        android:textSize="19dp"
         android:textColor="#665083"
         android:textStyle="bold|italic"
         ></TextView>
@@ -27,7 +27,7 @@
         android:id="@+id/headerText_mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="newshaberajansi@gmail.com"
+        android:text="newsmagazinajansi@gmail.com"
         android:textColor="#665083"
         android:textSize="19dp"
         android:textStyle="italic"
