--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,11 @@
         android:id="@+id/baslik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/baslik"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="MAGAZİNİ KAYNAĞINDAN ÖĞRENİN"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="23dp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +39,7 @@
         android:id="@+id/aciklama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="News Haber Ajansı,2000 yılından beri, doğru ve tarafsız haberin tek adresi.sizler için haberin kaynağına ulaşıyor,tarafsız haberleri tarafınıza özenle sunuyoruz."
+        android:text="News magazin Ajansı,2000 yılından beri, doğru ve tarafsız magazinin tek adresi.sizler için haberin kaynağına ulaşıyor,tarafsız haberleri tarafınıza özenle sunuyoruz."
         android:textAlignment="center"
         android:textSize="23sp"
         android:textStyle="italic"
@@ -46,6 +48,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.79" />
+        app:layout_constraintVertical_bias="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
