--- a/app/src/main/res/layout/activity_iletisim_bilgilerimiz.xml
+++ b/app/src/main/res/layout/activity_iletisim_bilgilerimiz.xml
@@ -34,7 +34,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="390dp"
-        android:layout_height="74dp"
+        android:layout_height="71dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView15">
@@ -85,8 +85,8 @@
     <LinearLayout
         android:layout_width="310dp"
         android:layout_height="71dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,13 +139,12 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="390dp"
-        android:layout_height="74dp"
+        android:layout_height="71dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/imageView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView21"
@@ -197,7 +196,8 @@
 
     <LinearLayout
         android:layout_width="310dp"
-        android:layout_height="86dp"
+        android:layout_height="71dp"
+        android:layout_marginBottom="2dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/imageView14"
         app:layout_constraintEnd_toEndOf="parent"
@@ -209,7 +209,9 @@
             android:id="@+id/imageView17"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
+            android:padding="5dp"
             app:srcCompat="@drawable/github" />
 
         <LinearLayout
